--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> html tag lab</title>
+    </head>
+    <body>
+        <hi>Hello,World!</hi>
+    </body>
+</html>
